--- a/extension/src/manifest.json
+++ b/extension/src/manifest.json
@@ -29,7 +29,7 @@
     {
       "matches": ["http://*/*", "https://*/*"],
       "js": ["content/recorder.js", "content/walkthrough.js"],
-      "css": ["content/overlay.css"],
+      "css": ["content/overlay.css", "content/widget.css", "content/feedback.css"],
       "run_at": "document_idle"
     }
   ],
