--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,7 +15,7 @@ python-multipart==0.0.6
 bcrypt==4.0.1  # Pin to compatible version with passlib
 
 # AI Services
-anthropic==0.7.1
+anthropic>=0.74.0  # Upgraded from 0.7.1 to fix 'messages' attribute error
 openai==1.3.5
 
 # Background Jobs
