Improvements to admin dashboard and test fixes

--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,6 @@ FRONTEND_URL=http://localhost:3000
 
 # Environment
 ENVIRONMENT=development
+
+# NOTE: The dashboard (Vite) requires its own .env file
+# See dashboard/.env.example for frontend environment variables
