--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,9 @@ Pillow==10.1.0
 python-dotenv==1.0.0
 httpx==0.25.2
 
+# Security
+slowapi>=0.1.9  # Rate limiting for auth endpoints
+
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
