--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,7 @@ resend==2.0.0
 boto3==1.29.7
 
 # Image Processing
-Pillow==10.1.0
+Pillow>=10.2.0
 
 # Utilities
 python-dotenv==1.0.0
@@ -44,3 +44,9 @@ pytest-asyncio==0.21.1
 
 # Validation
 email-validator==2.3.0
+
+psycopg2-binary>=2.9.9  # Synchronous driver (for SQLAlchemy)
+# OR
+asyncpg==0.29.0  # Async driver (if you want async support)
+
+supabase==2.3.0
