--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^1.7.17",
+    "@supabase/supabase-js": "^2.90.1",
     "lucide-react": "^0.561.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
