Multi-page workflow recording improvements + fixes to walkthrough mode

--- a/extension/src/manifest.json
+++ b/extension/src/manifest.json
@@ -5,6 +5,7 @@
   "description": "Record and replay interactive workflows with AI-powered guidance",
   "permissions": [
     "activeTab",
+    "alarms",
     "storage",
     "tabs",
     "scripting",
